# rv1126b-ai-toolkit

./: .gitignore  README.md  README_CN.md  README_EN.md
Demos/: build_all_demo.sh
Demos/algorithm-bsd/: CMakeLists.txt  test-bsd.cpp
Demos/algorithm-car/: CMakeLists.txt  test-car_detect.cpp
Demos/algorithm-face_detect/: CMakeLists.txt  test-face-detect.cpp
Demos/algorithm-face_landmark98/: CMakeLists.txt  test-face-landmark98.cpp
Demos/algorithm-face_recognition/: CMakeLists.txt  test-face-recognition.cpp
Demos/algorithm-fire/: CMakeLists.txt  test-fire_detect.cpp
Demos/algorithm-gestures/: CMakeLists.txt  test-gestures.cpp
Demos/algorithm-helmet/: CMakeLists.txt  test-helmet_detect.cpp
Demos/algorithm-lpr/: CMakeLists.txt  test-lpr.cpp
Demos/algorithm-ocr/: CMakeLists.txt  test-ocr.cpp
Demos/algorithm-person/: CMakeLists.txt  test-person_detect.cpp
Demos/algorithm-person_pose/: CMakeLists.txt  test-person_pose.cpp
Demos/algorithm-qrdecode/: CMakeLists.txt  test-qrdecode.cpp
Demos/algorithm-speech_recognition/: CMakeLists.txt  test-speech_recognition.cpp
Demos/common-base64/: CMakeLists.txt  test-base64.c
Demos/common-font_engine/: CMakeLists.txt  test-font_engine.cpp
Demos/common-ini/: CMakeLists.txt  test-iniWrapper.c
Demos/common-qrcode/: CMakeLists.txt
Demos/common-system_opt/: CMakeLists.txt
Demos/media-display/: CMakeLists.txt  test-display.c  test-display_pro.c
Demos/media-display/Release/: 720X1280.bgr
Demos/media-rga/: CMakeLists.txt  test-rga.cpp
Demos/netProtocol-http/: CMakeLists.txt
Demos/netProtocol-modbus/: CMakeLists.txt
Demos/netProtocol-mqtt/: CMakeLists.txt  test-mqtt_publish.c  test-mqtt_subscription.c
Solutions/: build_all_solu.sh
Solutions/aov/: CMakeLists.txt
Solutions/app-bsd/: CMakeLists.txt  build.sh
Solutions/app-bsd/include/: system.h
Solutions/app-bsd/src/: main.cpp
Solutions/app-bsd/src/analyzer/: algoProcess.cpp  algoProcess.h  analyzer.cpp  analyzer.h
Solutions/app-bsd/src/capturer/: capturer.cpp  capturer.h  decChannel.cpp  decChannel.h
Solutions/app-bsd/src/capturer/camera/: camera.h  mipi_camera.c
Solutions/app-bsd/src/capturer/camera/usb_camera/: usb_camera.c
Solutions/detect-Person/: CMakeLists.txt
Solutions/detect-Person/src/: main.cpp
Solutions/detect-Person/src/camera/: mipi_camera.c
Solutions/rtspIPCamera/: CMakeLists.txt
Solutions/rtspIPCamera/src/: appSource.cpp
Solutions/rtspIPCamera/src/camera/: mipi_camera.c
Solutions/rtspMulitPlayer/: CMakeLists.txt
Solutions/rtspMulitPlayer/src/: main.cpp
Solutions/rtspMulitPlayer/src/analyzer/: algoProcess.cpp  analyzer.cpp
Solutions/rtspMulitPlayer/src/capturer/: decChannel.cpp
UiSolutions/QDemo/QSrcCode/apiWrapper/: api.pri
UiSolutions/QDemo/QSrcCode/common/: common.pri
UiSolutions/QDemo/QSrcCode/common/ini/: ini_wrapper.c
UiSolutions/QDemo/QSrcCode/common/player/: player.cpp
UiSolutions/QDemo/QSrcCode/ui/: mainWidget.cpp  mainWidget.ui  ui.pri
easyeai-api/algorithm/bsd/: api.cmake  bsd.h
easyeai-api/algorithm/car_detect/: api.cmake  car_detect.h
easyeai-api/algorithm/face_detect/: api.cmake  decode.h  face_detect.h  generator.h  tools.h
easyeai-api/algorithm/face_landmark98/: api.cmake  face_landmark98.h
easyeai-api/algorithm/face_recognition/: api.cmake  face_recognition.h
easyeai-api/algorithm/fire_detect/: api.cmake  fire_detect.h
easyeai-api/algorithm/geometry/: geometry.cpp  geometry.h
easyeai-api/algorithm/gestures/: gestures.h  gestures_classify.h  gestures_pose.h
easyeai-api/algorithm/helmet_detect/: api.cmake  helmet_detect.h
easyeai-api/algorithm/lpr/: api.cmake  lpr.h  lpr_classifier.h  lpr_detector.h  lpr_recognizer.h  lpr_utils.h  put_text_zh.h
easyeai-api/algorithm/ocr/: api.cmake
easyeai-api/algorithm/person_detect/: api.cmake  person_detect.h
easyeai-api/algorithm/person_pose/: api.cmake  person_pose.h
easyeai-api/algorithm/qrdecode/: api.cmake  qrdecode.cpp  qrdecode.h
easyeai-api/algorithm/speech_recognition/: api.cmake  audio_utils.h  speech_recognition.h
easyeai-api/common/base64/: base64.cpp  base64.h
easyeai-api/common/font_engine/: Conversion.cpp  CvxText.cpp  CvxText.h  api.cmake  font_engine.h
easyeai-api/common/ini_wrapper/: ini_wrapper.c
easyeai-api/common/ipc/: ipc.h
easyeai-api/common/log_manager/: log_manager.h
easyeai-api/common/qrcode/: api.cmake  qrcode.cpp
easyeai-api/common/system_opt/: system_opt.cpp  system_opt.h
easyeai-api/media/display/: display.h  display_pro.h
easyeai-api/media/jpeg/: jpegCodec.c
easyeai-api/media/rga/: api.cmake  rga_wrapper.c  rga_wrapper.h
easyeai-api/media/rk_mpi/: api.cmake
easyeai-api/netProtocol/http/: api.cmake  https_request.cpp
